[tool.poetry]
name = "data structure and algorithm"
version = "0.0.0"
description = ""
authors = ["Abhik Chakraborty"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = { extras = ["all"], version = "^0.95.0" }
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
